# hs-asai

./: .gitignore  AUTHORS.txt  CHANGELOG.md  LICENSE.txt  README.md  asai.cabal
bench/: Bench1.hs
doc/: Control-Delimited-Tutorial.html  Control-Delimited.html  Control-Indexed-Applicative.html  Control-Indexed-Monad.html  Control-Indexed-Prelude.html  Data-Indexed-Functor.html  asai.haddock  doc-index-124.html  doc-index-33.html  doc-index-36.html  doc-index-38.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  (+13 more)
doc/src/: Control-Delimited-Tutorial.html  Control-Delimited.html  Control-Indexed-Applicative.html  Control-Indexed-Monad.html  Control-Indexed-Prelude.html  Data-Indexed-Functor.html
examples/: Iterator.hs  Printf.hs  Simple.hs  Tree.hs
src/Control/: Delimited.hs
src/Control/Delimited/: Tutorial.hs
src/Control/Indexed/: Applicative.hs  Monad.hs  Prelude.hs
src/Control/Monad/Cont/: Delimited.hs
src/Data/Indexed/: Functor.hs
tests/: Properties.hs  doctests.hs
