name:                asai
version:             0.0.0.0
synopsis:            A minimal library for delimited continuations.
description:
  @asai@ provides TODO FIXME blah blah...
homepage:            http://thoughtpolice.github.com/hs-asai
bug-reports:         http://github.com/thoughtpolice/hs-asai/issues
license:             MIT
license-file:        LICENSE.txt
copyright:           Copyright (c) Oleg Kiselyov 2007-2012,
                               (c) Austin Seipp  2012
author:              Oleg Kiselyov <oleg@pobox.com>
maintainer:          Austin Seipp <mad.one@gmail.com>
category:            Control
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.6.1

extra-source-files:
  AUTHORS.txt
  README.md
  CONTRIBUTING.md

source-repository head
  type: git
  location: https://github.com/thoughtpolice/hs-asai.git

library
  exposed-modules:
    Control.Monad.Cont.Delimited
  build-depends:
    base >= 4

  hs-source-dirs:     src
  ghc-options:        -Wall -O2 -funbox-strict-fields
                      -fwarn-tabs
  default-extensions: CPP
  default-language:   Haskell2010

test-suite properties
  hs-source-dirs: tests
  main-is:        Properties.hs
  type:           exitcode-stdio-1.0
  build-depends:
    base           >= 4,
    QuickCheck,
    hspec,
    asai
  ghc-options:      -Wall -fno-cse -fno-warn-orphans
                    -threaded -rtsopts
  default-language: Haskell2010

benchmark bench1
  hs-source-dirs: bench
  main-is:        Bench1.hs
  type:           exitcode-stdio-1.0
  build-depends:
    base           >= 4,
    criterion,
    asai
  ghc-options:      -Wall -fno-warn-orphans
  default-language: Haskell2010
